Bug 1699271 - Part 21: Generate more LIR nodes. r=iain
Differential Revision: https://phabricator.services.mozilla.com/D119726

UltraBlame original commit: 898028ee73ec75dbe76f513fe8938d46cb879474

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -455,6 +455,7 @@ getOperand
 ;
 }
 #
+#
 static
 const
 size_t
@@ -1231,16 +1232,35 @@ true
 name
 :
 TypeOfV
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+TypeOf
 -
 name
 :
 TypeOfO
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+mir_op
+:
+TypeOf
 -
 name
 :
@@ -1594,9 +1614,17 @@ false
 name
 :
 GetDOMMemberT
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+mir_op
+:
+GetDOMMember
 -
 name
 :
@@ -1749,16 +1777,38 @@ false
 name
 :
 CompareD
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+mir_op
+:
+Compare
 -
 name
 :
 CompareF
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+mir_op
+:
+Compare
 -
 name
 :
@@ -1777,37 +1827,107 @@ false
 name
 :
 CompareS
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+mir_op
+:
+Compare
 -
 name
 :
 CompareBigInt
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+num_temps
+:
+3
+mir_op
+:
+Compare
 -
 name
 :
 CompareBigIntInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+num_temps
+:
+2
+mir_op
+:
+Compare
 -
 name
 :
 CompareBigIntDouble
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+num_temps
+:
+1
+call_instruction
+:
+true
+mir_op
+:
+Compare
 -
 name
 :
 CompareBigIntString
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+Compare
 -
 name
 :
@@ -1815,20 +1935,100 @@ BitAndAndBranch
 gen_boilerplate
 :
 false
+#
+Takes
+a
+value
+and
+tests
+whether
+it
+is
+null
+undefined
+or
+is
+an
+object
+that
+#
+emulates
+|
+undefined
+|
+as
+determined
+by
+the
+JSCLASS_EMULATES_UNDEFINED
+class
+#
+flag
+on
+unwrapped
+objects
+.
+See
+also
+js
+:
+:
+EmulatesUndefined
+.
 -
 name
 :
 IsNullOrLikeUndefinedV
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+BoxedValue
+num_temps
+:
+2
+mir_op
+:
+Compare
+#
+Takes
+an
+object
+pointer
+and
+tests
+whether
+it
+is
+an
+object
+that
+emulates
+#
+|
+undefined
+|
+as
+above
+.
 -
 name
 :
 IsNullOrLikeUndefinedT
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+Compare
 -
 name
 :
@@ -1914,41 +2114,121 @@ operands
 inputI64
 :
 Int64
+#
+Not
+operation
+on
+a
+double
+.
 -
 name
 :
 NotD
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+Not
+#
+Not
+operation
+on
+a
+float32
+.
 -
 name
 :
 NotF
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+Not
+#
+Not
+operation
+on
+a
+BigInt
+.
 -
 name
 :
 NotBI
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+Not
+#
+Boolean
+complement
+operation
+on
+an
+object
+.
 -
 name
 :
 NotO
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+Not
+#
+Boolean
+complement
+operation
+on
+a
+value
+.
 -
 name
 :
 NotV
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
+num_temps
+:
+3
+mir_op
+:
+Not
 -
 name
 :
@@ -2173,13 +2453,29 @@ CopySignF
 gen_boilerplate
 :
 false
+#
+Count
+leading
+zeroes
+on
+an
+int32
+.
 -
 name
 :
 ClzI
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+num
+:
+WordSized
+mir_op
+:
+Clz
 -
 name
 :
@@ -2187,13 +2483,29 @@ ClzI64
 gen_boilerplate
 :
 false
+#
+Count
+trailing
+zeroes
+on
+an
+int32
+.
 -
 name
 :
 CtzI
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+num
+:
+WordSized
+mir_op
+:
+Ctz
 -
 name
 :
@@ -2201,13 +2513,31 @@ CtzI64
 gen_boilerplate
 :
 false
+#
+Count
+population
+on
+an
+int32
+.
 -
 name
 :
 PopcntI
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+num
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+Popcnt
 -
 name
 :
@@ -2282,13 +2612,35 @@ num_temps
 call_instruction
 :
 true
+#
+Integer
+raised
+to
+an
+integer
+power
+.
 -
 name
 :
 PowII
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+WordSized
+power
+:
+WordSized
+num_temps
+:
+2
+mir_op
+:
+Pow
 #
 Double
 raised
@@ -2746,9 +3098,26 @@ true
 name
 :
 Substr
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+string
+:
+WordSized
+begin
+:
+WordSized
+length
+:
+WordSized
+num_temps
+:
+3
+mir_op
+:
+StringSplit
 -
 name
 :
@@ -2797,20 +3166,52 @@ operands
 input
 :
 WordSized
+#
+Convert
+a
+value
+to
+a
+double
+.
 -
 name
 :
 ValueToDouble
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
+mir_op
+:
+ToDouble
+#
+Convert
+a
+value
+to
+a
+float32
+.
 -
 name
 :
 ValueToFloat32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
+mir_op
+:
+ToFloat32
 -
 name
 :
@@ -2818,69 +3219,421 @@ ValueToInt32
 gen_boilerplate
 :
 false
+#
+Convert
+a
+value
+to
+a
+BigInt
+.
 -
 name
 :
 ValueToBigInt
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
+mir_op
+:
+ToBigInt
+#
+Convert
+a
+double
+to
+an
+int32
+.
+#
+Input
+:
+floating
+-
+point
+Register
+#
+Output
+:
+32
+-
+bit
+integer
+#
+Bailout
+:
+if
+the
+double
+cannot
+be
+converted
+to
+an
+integer
+.
 -
 name
 :
 DoubleToInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+mir_op
+:
+ToNumberInt32
+#
+Convert
+a
+float32
+to
+an
+int32
+.
+#
+Input
+:
+floating
+-
+point
+Register
+#
+Output
+:
+32
+-
+bit
+integer
+#
+Bailout
+:
+if
+the
+float32
+cannot
+be
+converted
+to
+an
+integer
+.
 -
 name
 :
 Float32ToInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+mir_op
+:
+ToNumberInt32
+#
+Truncates
+a
+double
+to
+an
+int32
+.
+#
+Input
+:
+floating
+-
+point
+Register
+#
+Output
+:
+32
+-
+bit
+integer
+#
+Bailout
+:
+if
+the
+double
+when
+converted
+to
+an
+integer
+exceeds
+the
+int32
+#
+bounds
+.
+No
+bailout
+for
+NaN
+or
+negative
+zero
+.
 -
 name
 :
 DoubleToIntegerInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+mir_op
+:
+ToIntegerInt32
+#
+Truncates
+a
+float
+to
+an
+int32
+.
+#
+Input
+:
+floating
+-
+point
+Register
+#
+Output
+:
+32
+-
+bit
+integer
+#
+Bailout
+:
+if
+the
+double
+when
+converted
+to
+an
+integer
+exceeds
+the
+int32
+#
+bounds
+.
+No
+bailout
+for
+NaN
+or
+negative
+zero
+.
 -
 name
 :
 Float32ToIntegerInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+mir_op
+:
+ToIntegerInt32
+#
+Convert
+a
+double
+to
+a
+truncated
+int32
+.
+#
+Input
+:
+floating
+-
+point
+Register
+#
+Output
+:
+32
+-
+bit
+integer
 -
 name
 :
 TruncateDToInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+TruncateToInt32
+#
+Convert
+a
+double
+to
+a
+truncated
+int32
+with
+tls
+offset
+because
+we
+need
+it
+for
+#
+the
+slow
+ool
+path
+.
 -
 name
 :
 WasmBuiltinTruncateDToInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+tls
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+WasmBuiltinTruncateToInt32
+#
+Convert
+a
+float32
+to
+a
+truncated
+int32
+.
+#
+Input
+:
+floating
+-
+point
+Register
+#
+Output
+:
+32
+-
+bit
+integer
 -
 name
 :
 TruncateFToInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+TruncateToInt32
+#
+Convert
+a
+float32
+to
+a
+truncated
+int32
+with
+tls
+offset
+because
+we
+need
+it
+for
+#
+the
+slow
+ool
+path
+.
 -
 name
 :
 WasmBuiltinTruncateFToInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+tls
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+WasmBuiltinTruncateToInt32
 -
 name
 :
@@ -2918,34 +3671,125 @@ ExtendInt32ToInt64
 gen_boilerplate
 :
 false
+#
+Convert
+a
+boolean
+value
+to
+a
+string
+.
 -
 name
 :
 BooleanToString
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+ToString
+#
+Convert
+an
+integer
+hosted
+on
+one
+definition
+to
+a
+string
+with
+a
+function
+call
+.
 -
 name
 :
 IntToString
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+ToString
+#
+Convert
+a
+double
+hosted
+on
+one
+definition
+to
+a
+string
+with
+a
+function
+call
+.
 -
 name
 :
 DoubleToString
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+ToString
+#
+Convert
+a
+primitive
+to
+a
+string
+with
+a
+function
+call
+.
 -
 name
 :
 ValueToString
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+ToString
 -
 name
 :
@@ -3193,9 +4037,54 @@ false
 name
 :
 BinaryBoolCache
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+lhs
+:
+BoxedValue
+rhs
+:
+BoxedValue
+#
+Takes
+two
+temps
+:
+these
+are
+intendend
+to
+be
+FloatReg0
+and
+FloatReg1
+#
+To
+allow
+the
+actual
+cache
+code
+to
+safely
+clobber
+those
+values
+without
+#
+save
+and
+restore
+.
+num_temps
+:
+2
+mir_op
+:
+BinaryCache
 -
 name
 :
@@ -3681,9 +4570,14 @@ WordSized
 name
 :
 GuardHasAttachedArrayBuffer
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 #
 Double
 to
@@ -3890,20 +4784,76 @@ WordSized
 index
 :
 WordSized
+#
+Like
+LStoreElementV
+but
+supports
+indexes
+>
+=
+initialized
+length
+.
 -
 name
 :
 StoreElementHoleV
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+elements
+:
+WordSized
+index
+:
+WordSized
+value
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+StoreElementHole
+#
+Like
+LStoreElementT
+but
+supports
+indexes
+>
+=
+initialized
+length
+.
 -
 name
 :
 StoreElementHoleT
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+elements
+:
+WordSized
+index
+:
+WordSized
+value
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+StoreElementHole
 -
 name
 :
@@ -4226,9 +5176,20 @@ num_temps
 name
 :
 ClampVToUint8
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+ClampToUint8
 -
 name
 :
@@ -4236,13 +5197,34 @@ LoadFixedSlotV
 gen_boilerplate
 :
 false
+#
+Load
+a
+typed
+value
+from
+an
+object
+'
+s
+fixed
+slot
+.
 -
 name
 :
 LoadFixedSlotT
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+mir_op
+:
+LoadFixedSlot
 -
 name
 :
@@ -4330,20 +5312,62 @@ true
 mir_op
 :
 true
+#
+Store
+a
+boxed
+value
+to
+an
+object
+'
+s
+fixed
+slot
+.
 -
 name
 :
 StoreFixedSlotV
-gen_boilerplate
+operands
 :
-false
+obj
+:
+WordSized
+value
+:
+BoxedValue
+mir_op
+:
+StoreFixedSlot
+#
+Store
+a
+typed
+value
+to
+an
+object
+'
+s
+fixed
+slot
+.
 -
 name
 :
 StoreFixedSlotT
-gen_boilerplate
+operands
 :
-false
+obj
+:
+WordSized
+value
+:
+WordSized
+mir_op
+:
+StoreFixedSlot
 -
 name
 :
@@ -4412,20 +5436,123 @@ LoadDynamicSlotV
 gen_boilerplate
 :
 false
+#
+Store
+a
+value
+to
+an
+object
+'
+s
+dslots
+or
+a
+slots
+vector
+.
 -
 name
 :
 StoreDynamicSlotV
-gen_boilerplate
+operands
 :
-false
+slots
+:
+WordSized
+value
+:
+BoxedValue
+mir_op
+:
+StoreDynamicSlot
+#
+Store
+a
+typed
+value
+to
+an
+object
+'
+s
+dslots
+or
+a
+slots
+vector
+.
+This
+has
+a
+#
+few
+advantages
+over
+LStoreDynamicSlotV
+:
+#
+1
+)
+We
+can
+bypass
+storing
+the
+type
+tag
+if
+the
+slot
+has
+the
+same
+type
+as
+#
+the
+value
+.
+#
+2
+)
+Better
+Register
+allocation
+:
+we
+can
+store
+constants
+and
+FP
+regs
+directly
+#
+without
+requiring
+a
+second
+Register
+for
+the
+value
+.
 -
 name
 :
 StoreDynamicSlotT
-gen_boilerplate
+operands
 :
-false
+slots
+:
+WordSized
+value
+:
+WordSized
+mir_op
+:
+StoreDynamicSlot
 #
 Read
 length
@@ -4630,13 +5757,45 @@ num_temps
 mir_op
 :
 true
+#
+Round
+a
+single
+precision
+number
+and
+converts
+it
+to
+an
+int32
+.
+#
+Implements
+Math
+.
+round
+(
+)
+.
 -
 name
 :
 RoundF
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+num
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+Round
 #
 Truncates
 a
@@ -4741,13 +5900,44 @@ WordSized
 mir_op
 :
 true
+#
+Rounds
+a
+single
+precision
+number
+accordingly
+to
+mir
+(
+)
+-
+>
+roundingMode
+(
+)
+#
+and
+keeps
+a
+single
+output
+.
 -
 name
 :
 NearbyIntF
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+num
+:
+WordSized
+mir_op
+:
+NearbyInt
 #
 Load
 a
@@ -4851,23 +6041,62 @@ true
 name
 :
 CallSetElement
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+index
+:
+BoxedValue
+value
+:
+BoxedValue
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 CallDeleteProperty
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+BoxedValue
+call_instruction
+:
+true
+mir_op
+:
+DeleteProperty
 -
 name
 :
 CallDeleteElement
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+BoxedValue
+index
+:
+BoxedValue
+call_instruction
+:
+true
+mir_op
+:
+DeleteElement
 #
 Patchable
 jump
@@ -4951,9 +6180,20 @@ true
 name
 :
 OptimizeSpreadCallCache
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -5143,62 +6383,282 @@ num_temps
 mir_op
 :
 true
+#
+Generational
+write
+barrier
+used
+when
+writing
+an
+object
+to
+another
+object
+.
 -
 name
 :
 PostWriteBarrierO
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+PostWriteBarrier
+#
+Generational
+write
+barrier
+used
+when
+writing
+a
+string
+to
+an
+object
+.
 -
 name
 :
 PostWriteBarrierS
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+PostWriteBarrier
+#
+Generational
+write
+barrier
+used
+when
+writing
+a
+BigInt
+to
+an
+object
+.
 -
 name
 :
 PostWriteBarrierBI
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+PostWriteBarrier
+#
+Generational
+write
+barrier
+used
+when
+writing
+a
+value
+to
+another
+object
+.
 -
 name
 :
 PostWriteBarrierV
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+PostWriteBarrier
+#
+Generational
+write
+barrier
+used
+when
+writing
+an
+object
+to
+another
+object
+'
+s
+#
+elements
+.
 -
 name
 :
 PostWriteElementBarrierO
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+PostWriteElementBarrier
+#
+Generational
+write
+barrier
+used
+when
+writing
+a
+string
+to
+an
+object
+'
+s
+#
+elements
+.
 -
 name
 :
 PostWriteElementBarrierS
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+PostWriteElementBarrier
+#
+Generational
+write
+barrier
+used
+when
+writing
+a
+BigInt
+to
+an
+object
+'
+s
+#
+elements
+.
 -
 name
 :
 PostWriteElementBarrierBI
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+PostWriteElementBarrier
+#
+Generational
+write
+barrier
+used
+when
+writing
+a
+value
+to
+another
+object
+'
+s
+#
+elements
+.
 -
 name
 :
 PostWriteElementBarrierV
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+index
+:
+WordSized
+value
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+PostWriteElementBarrier
 #
 Guard
 against
@@ -5636,16 +7096,38 @@ false
 name
 :
 InstanceOfO
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+lhs
+:
+WordSized
+rhs
+:
+WordSized
+mir_op
+:
+InstanceOf
 -
 name
 :
 InstanceOfV
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+lhs
+:
+BoxedValue
+rhs
+:
+WordSized
+mir_op
+:
+InstanceOf
 -
 name
 :
@@ -5657,16 +7139,35 @@ false
 name
 :
 IsCallableO
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+mir_op
+:
+IsCallable
 -
 name
 :
 IsCallableV
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+IsCallable
 -
 name
 :
@@ -5698,16 +7199,35 @@ WordSized
 name
 :
 IsArrayO
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+mir_op
+:
+IsArray
 -
 name
 :
 IsArrayV
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+IsArray
 -
 name
 :
@@ -6178,9 +7698,14 @@ true
 name
 :
 WasmStackArgI64
-gen_boilerplate
+operands
 :
-false
+arg
+:
+Int64
+mir_op
+:
+WasmStackArg
 -
 name
 :
@@ -7168,9 +8693,14 @@ false
 name
 :
 WasmBoxValue
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+BoxedValue
 -
 name
 :
