Bug 1699271 - Part 22: Generate more LIR ops. r=iain
Differential Revision: https://phabricator.services.mozilla.com/D119727

UltraBlame original commit: 54c739cc8d2f6553057f3215df1f493abf23237d

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -494,7 +494,7 @@ with
 their
 types
 :
-WordSized
+operand
 getters
 and
 setters
@@ -770,13 +770,33 @@ WordSized
 mir_op
 :
 true
+#
+Formal
+argument
+for
+a
+function
+returning
+a
+box
+.
+Formal
+arguments
+are
+#
+initially
+read
+from
+the
+stack
+.
 -
 name
 :
 Parameter
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
 #
 Stack
 offset
@@ -1283,16 +1303,60 @@ true
 name
 :
 ToPropertyKeyCache
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+input
+:
+BoxedValue
+mir_op
+:
+true
+#
+Allocate
+an
+object
+for
+|
+new
+|
+on
+the
+caller
+-
+side
+#
+when
+there
+is
+no
+templateObject
+or
+prototype
+known
 -
 name
 :
 CreateThis
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+callee
+:
+WordSized
+newTarget
+:
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+true
 #
 Allocate
 an
@@ -1375,13 +1439,31 @@ GetInlinedArgument
 gen_boilerplate
 :
 false
+#
+Get
+argument
+from
+arguments
+object
+.
 -
 name
 :
 GetArgumentsObjectArg
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+argsObject
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 #
 Set
 argument
@@ -1407,13 +1489,33 @@ num_temps
 mir_op
 :
 true
+#
+Load
+an
+element
+from
+an
+arguments
+object
+.
 -
 name
 :
 LoadArgumentsObjectArg
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+argsObject
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+1
 #
 Return
 |
@@ -1522,9 +1624,20 @@ true
 name
 :
 ImplicitThis
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+env
+:
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -1636,23 +1749,47 @@ false
 name
 :
 LoadDOMExpandoValue
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+proxy
+:
+WordSized
+mir_op
+:
+true
 -
 name
 :
 LoadDOMExpandoValueGuardGeneration
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+proxy
+:
+WordSized
+mir_op
+:
+true
 -
 name
 :
 LoadDOMExpandoValueIgnoreGeneration
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+proxy
+:
+WordSized
+mir_op
+:
+true
 -
 name
 :
@@ -2355,13 +2492,23 @@ operands
 num
 :
 WordSized
+#
+Negative
+of
+an
+int64
 -
 name
 :
 NegI64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+num
+:
+Int64
 #
 Negative
 of
@@ -2394,13 +2541,28 @@ operands
 num
 :
 WordSized
+#
+Absolute
+value
+of
+an
+integer
+.
 -
 name
 :
 AbsI
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+num
+:
+WordSized
+mir_op
+:
+Abs
 #
 Absolute
 value
@@ -2476,13 +2638,29 @@ WordSized
 mir_op
 :
 Clz
+#
+Count
+leading
+zeroes
+on
+an
+int64
+.
 -
 name
 :
 ClzI64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+num
+:
+Int64
+mir_op
+:
+Clz
 #
 Count
 trailing
@@ -2506,13 +2684,29 @@ WordSized
 mir_op
 :
 Ctz
+#
+Count
+trailing
+zeroes
+on
+an
+int64
+.
 -
 name
 :
 CtzI64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+num
+:
+Int64
+mir_op
+:
+Ctz
 #
 Count
 population
@@ -2538,13 +2732,31 @@ num_temps
 mir_op
 :
 Popcnt
+#
+Count
+population
+on
+an
+int64
+.
 -
 name
 :
 PopcntI64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+num
+:
+Int64
+num_temps
+:
+1
+mir_op
+:
+Popcnt
 -
 name
 :
@@ -3668,9 +3880,17 @@ true
 name
 :
 ExtendInt32ToInt64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+true
 #
 Convert
 a
@@ -3822,13 +4042,33 @@ OsrEntry
 gen_boilerplate
 :
 false
+#
+Materialize
+a
+Value
+stored
+in
+an
+interpreter
+frame
+for
+OSR
+.
 -
 name
 :
 OsrValue
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+entry
+:
+WordSized
+mir_op
+:
+true
 #
 Materialize
 a
@@ -3858,13 +4098,35 @@ WordSized
 mir_op
 :
 true
+#
+Materialize
+a
+JSObject
+env
+chain
+stored
+in
+an
+interpreter
+frame
+for
+OSR
+.
 -
 name
 :
 OsrReturnValue
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+entry
+:
+WordSized
+mir_op
+:
+true
 -
 name
 :
@@ -3897,9 +4159,26 @@ true
 name
 :
 RegExpMatcher
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+regexp
+:
+WordSized
+string
+:
+WordSized
+lastIndex
+:
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -4030,9 +4309,54 @@ true
 name
 :
 BinaryValueCache
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+lhs
+:
+BoxedValue
+rhs
+:
+BoxedValue
+#
+Takes
+two
+temps
+:
+these
+are
+intended
+to
+be
+FloatReg0
+and
+FloatReg1
+#
+to
+allow
+the
+actual
+cache
+code
+to
+safely
+clobber
+those
+values
+without
+#
+save
+and
+restore
+.
+num_temps
+:
+2
+mir_op
+:
+BinaryCache
 -
 name
 :
@@ -4089,9 +4413,17 @@ BinaryCache
 name
 :
 UnaryCache
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+input
+:
+BoxedValue
+mir_op_cast
+:
+true
 -
 name
 :
@@ -4972,9 +5304,23 @@ false
 name
 :
 LoadTypedArrayElementHole
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+object
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -5190,13 +5536,34 @@ num_temps
 mir_op
 :
 ClampToUint8
+#
+Load
+a
+boxed
+value
+from
+an
+object
+'
+s
+fixed
+slot
+.
 -
 name
 :
 LoadFixedSlotV
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+object
+:
+WordSized
+mir_op
+:
+LoadFixedSlot
 #
 Load
 a
@@ -5368,34 +5735,110 @@ WordSized
 mir_op
 :
 StoreFixedSlot
+#
+Note
+Name
+ICs
+always
+return
+a
+Value
+.
+There
+are
+no
+V
+/
+T
+variants
+.
 -
 name
 :
 GetNameCache
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+envObj
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 CallGetIntrinsicValue
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 GetPropSuperCache
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+obj
+:
+WordSized
+receiver
+:
+BoxedValue
+id
+:
+BoxedValue
+mir_op
+:
+true
+#
+Patchable
+jump
+to
+stubs
+generated
+for
+a
+GetProperty
+cache
+which
+loads
+a
+#
+boxed
+value
+.
 -
 name
 :
 GetPropertyCache
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+value
+:
+BoxedValue
+id
+:
+BoxedValue
+mir_op
+:
+true
 -
 name
 :
@@ -5429,13 +5872,36 @@ WordSized
 mir_op
 :
 true
+#
+Load
+a
+value
+from
+an
+object
+'
+s
+dslots
+or
+a
+slots
+vector
+.
 -
 name
 :
 LoadDynamicSlotV
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+in
+:
+WordSized
+mir_op
+:
+LoadDynamicSlot
 #
 Store
 a
@@ -6198,9 +6664,20 @@ true
 name
 :
 IteratorMore
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+iterator
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -6238,13 +6715,27 @@ ArgumentsLength
 result_type
 :
 WordSized
+#
+Load
+a
+value
+from
+the
+actual
+arguments
+.
 -
 name
 :
 GetFrameArgument
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+index
+:
+WordSized
 #
 Create
 the
@@ -6326,34 +6817,110 @@ WordSized
 mir_op
 :
 true
+#
+Convert
+a
+Boolean
+to
+an
+Int64
+following
+ToBigInt
+.
 -
 name
 :
 BooleanToInt64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+ToInt64
+#
+Convert
+a
+String
+to
+an
+Int64
+following
+ToBigInt
+.
 -
 name
 :
 StringToInt64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+ToInt64
+#
+Simulate
+ToBigInt
+on
+a
+Value
+and
+produce
+a
+matching
+Int64
+.
 -
 name
 :
 ValueToInt64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+input
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+ToInt64
+#
+Truncate
+a
+BigInt
+to
+an
+unboxed
+int64
+.
 -
 name
 :
 TruncateBigIntToInt64
-gen_boilerplate
+result_type
 :
-false
+Int64
+operands
+:
+input
+:
+WordSized
+mir_op
+:
+true
 #
 Create
 a
@@ -6870,23 +7437,62 @@ num_temps
 name
 :
 ProxyGet
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+proxy
+:
+WordSized
+num_temps
+:
+1
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 ProxyGetByValue
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+proxy
+:
+WordSized
+id
+:
+BoxedValue
+call_instruction
+:
+true
 -
 name
 :
 ProxyHasProp
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+proxy
+:
+WordSized
+id
+:
+BoxedValue
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -6951,23 +7557,71 @@ true
 name
 :
 MegamorphicLoadSlot
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+object
+:
+WordSized
+num_temps
+:
+3
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 MegamorphicLoadSlotByValue
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+object
+:
+WordSized
+id
+:
+BoxedValue
+num_temps
+:
+2
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 MegamorphicStoreSlot
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+object
+:
+WordSized
+rhs
+:
+BoxedValue
+num_temps
+:
+3
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -7979,16 +8633,21 @@ true
 name
 :
 NewTarget
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
 -
 name
 :
 ArrowNewTarget
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+callee
+:
+WordSized
 -
 name
 :
@@ -8000,9 +8659,17 @@ false
 name
 :
 CheckReturn
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+returnValue
+:
+BoxedValue
+thisValue
+:
+BoxedValue
 -
 name
 :
@@ -8145,9 +8812,23 @@ true
 name
 :
 MaybeExtractAwaitValue
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+value
+:
+BoxedValue
+canSkip
+:
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -8212,9 +8893,14 @@ true
 name
 :
 GetPrototypeOf
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+target
+:
+WordSized
 -
 name
 :
@@ -8259,9 +8945,17 @@ true
 name
 :
 SuperFunction
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+callee
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
@@ -8419,16 +9113,38 @@ true
 name
 :
 CallGetSparseElement
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+object
+:
+WordSized
+index
+:
+WordSized
+call_instruction
+:
+true
 -
 name
 :
 CallNativeGetElement
-gen_boilerplate
+result_type
 :
-false
+BoxedValue
+operands
+:
+object
+:
+WordSized
+index
+:
+WordSized
+call_instruction
+:
+true
 -
 name
 :
