Bug 1724201 - Repurpose the vector bitselect node as a general ternary op node. r=yury
For FMA and FMS we will need a ternary node, and bitselect already has
the right shape and logic.  We just need to rename it and generalize
it slightly with the SIMD op as a parameter, as we have for many other
nodes.

Drive-by fix: bitselect on arm64 does not actually need a temp
register.

Differential Revision: https://phabricator.services.mozilla.com/D122080

UltraBlame original commit: 4736a84c2dbb5be274024dd463dbd73d6094b90e

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -8911,13 +8911,6 @@ false
 -
 name
 :
-WasmBitselectSimd128
-gen_boilerplate
-:
-false
--
-name
-:
 WasmBinarySimd128
 gen_boilerplate
 :
@@ -9072,6 +9065,13 @@ none
 clone
 :
 true
+-
+name
+:
+WasmTernarySimd128
+gen_boilerplate
+:
+false
 -
 name
 :
