Backed out 3 changesets (bug 1724201) for causing bustages on LIR-shared.h. CLOSED TREE
Backed out changeset ba0bb80adf91 (bug 1724201)
Backed out changeset 4736a84c2dbb (bug 1724201)
Backed out changeset 762eaa3d8d19 (bug 1724201)

UltraBlame original commit: f80bd6c1f30e9afcda6b13e79308193a368935fb

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -8911,6 +8911,13 @@ false
 -
 name
 :
+WasmBitselectSimd128
+gen_boilerplate
+:
+false
+-
+name
+:
 WasmBinarySimd128
 gen_boilerplate
 :
@@ -9065,13 +9072,6 @@ none
 clone
 :
 true
--
-name
-:
-WasmTernarySimd128
-gen_boilerplate
-:
-false
 -
 name
 :
