--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -1002,9 +1002,13 @@ toolchain
 -
 sysroot
 -
+wasm32
+-
 wasi
 -
-sysroot
+compiler
+-
+rt
 linux64
 -
 clang
@@ -2390,9 +2394,13 @@ toolchain
 -
 sysroot
 -
+wasm32
+-
 wasi
 -
-sysroot
+compiler
+-
+rt
 -
 12
 linux64
@@ -3201,9 +3209,13 @@ sdk
 .
 12
 -
+wasm32
+-
 wasi
 -
-sysroot
+compiler
+-
+rt
 -
 12
 macosx64
@@ -3388,9 +3400,13 @@ sdk
 .
 0
 -
+wasm32
+-
 wasi
 -
-sysroot
+compiler
+-
+rt
 -
 12
 win64
@@ -3570,9 +3586,13 @@ ninja
 toolchain
 :
 -
+wasm32
+-
 wasi
 -
-sysroot
+compiler
+-
+rt
 -
 12
 win64
