--- a/taskcluster/ci/toolchain/compiler-rt.yml
+++ b/taskcluster/ci/toolchain/compiler-rt.yml
@@ -625,3 +625,85 @@ sdk
 11
 .
 0
+wasm32
+-
+wasi
+-
+compiler
+-
+rt
+-
+12
+:
+description
+:
+"
+wasm32
+-
+wasi
+Compiler
+-
+rt
+for
+Clang
+12
+toolchain
+build
+"
+treeherder
+:
+symbol
+:
+TL
+(
+wasi
+-
+crt
+-
+12
+)
+worker
+-
+type
+:
+b
+-
+linux
+-
+xlarge
+run
+:
+script
+:
+build
+-
+compiler
+-
+rt
+-
+wasi
+.
+sh
+toolchain
+-
+alias
+:
+wasm32
+-
+wasi
+-
+compiler
+-
+rt
+fetches
+:
+fetch
+:
+-
+clang
+-
+12
+-
+wasi
+-
+sdk
