--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -43639,6 +43639,60 @@ rust
 :
 true
 #
+An
+override
+for
+prefers
+-
+color
+-
+scheme
+for
+content
+documents
+.
+#
+#
+Dark
+(
+0
+)
+light
+(
+1
+)
+or
+system
+(
+2
+)
+.
+-
+name
+:
+layout
+.
+css
+.
+prefers
+-
+color
+-
+scheme
+.
+content
+-
+override
+type
+:
+RelaxedAtomicInt32
+value
+:
+2
+mirror
+:
+always
+#
 Dictates
 whether
 or
