--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -1225,6 +1225,24 @@ navigation
 js
 ]
 [
+browser_inspector_iframe
+-
+picker
+-
+bfcache
+-
+navigation
+.
+js
+]
+[
+browser_inspector_iframe
+-
+picker
+.
+js
+]
+[
 browser_inspector_infobar_01
 .
 js
@@ -1880,13 +1898,6 @@ ids
 and
 -
 classes
-.
-js
-]
-[
-browser_inspector_select
--
-docshell
 .
 js
 ]
