Bug 1724909 - [devtools] Only destroy existing target for same browsing context on server side target switch. r=jdescottes.
We used to destroy any existing target when creating a new one, but this was
causing remote frames to be destroyed on document where there was multiple remote
iframe sharing the same origin.
This patch changes the function that we use to retrieve an existing target given
a watcher actor id and a browserId, by allowing to pass a specific browsing context id.
A couple tests are added that are failing without the fix in this patch.

Differential Revision: https://phabricator.services.mozilla.com/D122230

UltraBlame original commit: 7fb12263aede9df48971e33a5097f82492858d09

--- a/devtools/shared/commands/resource/tests/browser.ini
+++ b/devtools/shared/commands/resource/tests/browser.ini
@@ -248,6 +248,11 @@ browser_resources_sources
 js
 ]
 [
+browser_resources_stylesheets_navigation
+.
+js
+]
+[
 browser_resources_stylesheets
 .
 js
