Bug 1715878 - disable browser_resources_document_events on Linux_64_QR for frequent failures. r=intermittent-reviewers,bhearsum DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122604

UltraBlame original commit: 8a06468f66b619580c57b06c967db7e1ffcb7bc7

--- a/devtools/shared/commands/resource/tests/browser.ini
+++ b/devtools/shared/commands/resource/tests/browser.ini
@@ -192,6 +192,24 @@ win10_2004
 #
 Bug
 1723573
+os
+=
+=
+'
+linux
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+#
+Bug
+1715878
 [
 browser_resources_error_messages
 .
