--- a/testing/web-platform/meta/webdriver/tests/bidi/session_subscribe/subscribe.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/session_subscribe/subscribe.py.ini
@@ -3,154 +3,28 @@ subscribe
 .
 py
 ]
-[
-test_params_empty
-]
-expected
+disabled
 :
 if
 release_or_beta
 :
-ERROR
-[
-test_params_events_invalid_type
-[
-None
-\
-]
-]
-expected
+https
 :
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_invalid_type
-[
-True
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_invalid_type
-[
-foo
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_invalid_type
-[
-42
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_invalid_type
-[
-value4
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_empty
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_value_invalid_type
-[
-None
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_value_invalid_type
-[
-True
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_value_invalid_type
-[
-42
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_value_invalid_type
-[
-value3
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_events_value_invalid_type
-[
-value4
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1712902
 [
 test_params_events_value_invalid_event_name
 [
@@ -159,10 +33,6 @@ test_params_events_value_invalid_event_name
 ]
 expected
 :
-if
-release_or_beta
-:
-ERROR
 FAIL
 [
 test_params_events_value_invalid_event_name
@@ -173,10 +43,6 @@ foo
 ]
 expected
 :
-if
-release_or_beta
-:
-ERROR
 FAIL
 [
 test_params_events_value_invalid_event_name
@@ -189,147 +55,4 @@ bar
 ]
 expected
 :
-if
-release_or_beta
-:
-ERROR
 FAIL
-[
-test_params_contexts_invalid_type
-[
-None
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_invalid_type
-[
-True
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_invalid_type
-[
-foo
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_invalid_type
-[
-42
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_invalid_type
-[
-value4
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_empty
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_value_invalid_type
-[
-None
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_value_invalid_type
-[
-True
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_value_invalid_type
-[
-42
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_value_invalid_type
-[
-value3
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
-[
-test_params_contexts_value_invalid_type
-[
-value4
-\
-]
-]
-expected
-:
-if
-release_or_beta
-:
-ERROR
