--- a/devtools/client/webconsole/test/browser/_webconsole.ini
+++ b/devtools/client/webconsole/test/browser/_webconsole.ini
@@ -2494,11 +2494,27 @@ browser_webconsole_network_messages_openinnet
 .
 js
 ]
+fail
+-
+if
+=
+fission
+#
+Bug
+1613081
 [
 browser_webconsole_network_messages_resend_request
 .
 js
 ]
+fail
+-
+if
+=
+fission
+#
+Bug
+1613081
 [
 browser_webconsole_network_messages_stacktrace_console_initiated_request
 .
@@ -2814,11 +2830,27 @@ browser_webconsole_shows_reqs_from_netmonitor
 .
 js
 ]
+skip
+-
+if
+=
+fission
+#
+Bug
+1613081
 [
 browser_webconsole_shows_reqs_in_netmonitor
 .
 js
 ]
+fail
+-
+if
+=
+fission
+#
+Bug
+1613081
 [
 browser_webconsole_sidebar_object_expand_when_message_pruned
 .
