Bug 1725270 - Add testing pref to get old about:blank process selection behavior, r=jesup
Adds a pref to perform about:blank document loads which have system
triggering principals within the existing process, rather than doing a
process switch. This can be used in performance tests which load
about:blank and do not expect process switches.

Differential Revision: https://phabricator.services.mozilla.com/D122405

UltraBlame original commit: 50435d7ca25a9bebc09e0efb68b27d99ca40e0fd

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -7617,6 +7617,72 @@ false
 mirror
 :
 always
+#
+Testing
+-
+only
+pref
+to
+force
+system
+-
+triggered
+about
+:
+blank
+loads
+to
+not
+change
+#
+content
+processes
+.
+This
+is
+used
+for
+performance
+tests
+which
+load
+an
+#
+about
+:
+blank
+document
+between
+navigations
+for
+historical
+reasons
+to
+avoid
+#
+unnecessary
+process
+switches
+.
+-
+name
+:
+browser
+.
+tabs
+.
+remote
+.
+systemTriggeredAboutBlankAnywhere
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
 -
 name
 :
