--- a/testing/web-platform/meta/webcodecs/videoFrame-construction.https.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-construction.https.any.js.ini
@@ -25,6 +25,16 @@ expected
 :
 FAIL
 [
+Test
+SharedArrayBuffer
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
 videoFrame
 -
 construction
@@ -41,6 +51,16 @@ Uint8Array
 (
 SharedArrayBuffer
 )
+constructed
+I420
+VideoFrame
+]
+expected
+:
+FAIL
+[
+Test
+SharedArrayBuffer
 constructed
 I420
 VideoFrame
