--- a/testing/web-platform/meta/webcodecs/videoFrame-copyTo.https.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-copyTo.https.any.js.ini
@@ -23,6 +23,18 @@ expected
 :
 FAIL
 [
+Test
+copying
+I420
+frame
+to
+SharedArrayBuffer
+.
+]
+expected
+:
+FAIL
+[
 videoFrame
 -
 copyTo
@@ -43,6 +55,18 @@ frame
 to
 shared
 ArrayBufferView
+.
+]
+expected
+:
+FAIL
+[
+Test
+copying
+I420
+frame
+to
+SharedArrayBuffer
 .
 ]
 expected
