Bug 1724290 [wpt PR 29920] - Update wpt metadata, a=testonly
wpt-pr: 29920
wpt-type: metadata

UltraBlame original commit: 82e28aa16eae711480d35dfc2a4887bfd7107973

--- a/testing/web-platform/meta/webcodecs/videoFrame-drawImage.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-drawImage.any.js.ini
@@ -116,6 +116,19 @@ expected
 :
 FAIL
 [
+drawImage
+on
+a
+closed
+VideoFrame
+throws
+InvalidStateError
+.
+]
+expected
+:
+FAIL
+[
 videoFrame
 -
 drawImage
@@ -225,6 +238,19 @@ canvas
 rec2020
 uint8
 )
+.
+]
+expected
+:
+FAIL
+[
+drawImage
+on
+a
+closed
+VideoFrame
+throws
+InvalidStateError
 .
 ]
 expected
