--- a/testing/web-platform/meta/webcodecs/videoFrame-texImage.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-texImage.any.js.ini
@@ -74,6 +74,72 @@ expected
 :
 FAIL
 [
+texImage2D
+with
+48x36
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texSubImage2D
+with
+48x36
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texImage2D
+with
+480x360
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texSubImage2D
+with
+480x360
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texImage2D
+with
+a
+closed
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texSubImage2D
+with
+a
+closed
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
 videoFrame
 -
 texImage
@@ -141,6 +207,72 @@ texSubImage2D
 480x360
 )
 srgb
+.
+]
+expected
+:
+FAIL
+[
+texImage2D
+with
+48x36
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texSubImage2D
+with
+48x36
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texImage2D
+with
+480x360
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texSubImage2D
+with
+480x360
+srgb
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texImage2D
+with
+a
+closed
+VideoFrame
+.
+]
+expected
+:
+FAIL
+[
+texSubImage2D
+with
+a
+closed
+VideoFrame
 .
 ]
 expected
