Bug 1724323 [wpt PR 29923] - Update wpt metadata, a=testonly
wpt-pr: 29923
wpt-type: metadata

UltraBlame original commit: 6a54d826c98f958ac8d0b9ab4d113873c41cb47c

--- a/testing/web-platform/meta/webcodecs/encoded-audio-chunk.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/encoded-audio-chunk.any.js.ini
@@ -35,6 +35,19 @@ expected
 :
 FAIL
 [
+Test
+copyTo
+(
+)
+exception
+if
+destination
+invalid
+]
+expected
+:
+FAIL
+[
 encoded
 -
 audio
@@ -67,6 +80,19 @@ copyTo
 exception
 if
 destiation
+invalid
+]
+expected
+:
+FAIL
+[
+Test
+copyTo
+(
+)
+exception
+if
+destination
 invalid
 ]
 expected
